# Lilac2LilyMod

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
UE4SS_FOR_Lilac2LilyMod/UE4SS/Mods/: mods.txt
UE4SS_FOR_Lilac2LilyMod/UE4SS/Mods/CustumeLuaTest/: cp.bat
UE4SS_FOR_Lilac2LilyMod/UE4SS/Mods/CustumeLuaTest/Scripts/: main.lua  main.lua.bak
assets/: SPR_Img_Costume_p0101.json  T_Img_Costume_p0101.json  p0101_Lily-atlas.atlas  p0101_Lily-atlas.json  p0101_Lily-data.json  p0101_Lily-data.skel  p0101_Lily.json
config/: DT_ItemCostumes_Extension.json  Lilac2LilyAnimationMap.json  RVA.json  UObjectPaths.json
docs/: ASSET_CONSTRUCTION_ROADMAP.md  CALLS.md  HOOKS.md  INJECTION_PATTERN.md  LILY_SPINE_STUTTER_FIX.md  RVA_RELOCATION.md  UI_DISPLAY_SUFFICIENT_CONDITIONS.md
dumps_for_analysis/: DT_ItemCostumes.json  WBP_Extra_Costume.json  WBP_Pause.json  WBP_Title.json
dumps_for_analysis/Atlases/Costumes/: SPR_Img_Costume_p0000.json  SPR_Img_Costume_p0010.json  SPR_Img_Costume_p0011.json  SPR_Img_Costume_p0020.json  SPR_Img_Costume_p0021.json  SPR_Img_Costume_p0030.json  SPR_Img_Costume_p0031.json  SPR_Img_Costume_p0040.json  SPR_Img_Costume_p0041.json  SPR_Img_Costume_p0042.json  SPR_Img_Costume_p0050.json  SPR_Img_Costume_p0051.json  SPR_Img_Costume_p0060.json
dumps_for_analysis/Atlases/Costumes/Textures/: ATLAS_Costumes.json
dumps_for_analysis/Localization/Game/: Game.json
dumps_for_analysis/Localization/Game/ab/: Game.json
dumps_for_analysis/Localization/Game/de-DE/: Game.json
dumps_for_analysis/Localization/Game/en-US/: Game.json
dumps_for_analysis/Localization/Game/es-ES/: Game.json
dumps_for_analysis/Localization/Game/fr-FR/: Game.json
dumps_for_analysis/Localization/Game/it-IT/: Game.json
dumps_for_analysis/Localization/Game/ja-JP/: Game.json
dumps_for_analysis/Localization/Game/ko-KR/: Game.json
dumps_for_analysis/Localization/Game/pt-BR/: Game.json
dumps_for_analysis/Localization/Game/ru-RU/: Game.json
dumps_for_analysis/Localization/Game/zh-Hans/: Game.json
dumps_for_analysis/Localization/Game/zh-Hant/: Game.json
src/: costume.cpp  costume.h  dllmain.cpp  lifecycle.cpp  lifecycle.h  rt_config.cpp  rt_config.h  rva_check.cpp  rva_check.h  spine.cpp  spine.h
src/asset_forge/: paper_sprite_forge.cpp  paper_sprite_forge.h  spine_atlas_forge.cpp  spine_atlas_forge.h  spine_skeleton_data_forge.cpp  spine_skeleton_data_forge.h  texture2d_forge.cpp  texture2d_forge.h  uobject_copy_forge.cpp  uobject_copy_forge.h
